--- a/app/src/main/res/layout/activity_profile_edit_layout.xml
+++ b/app/src/main/res/layout/activity_profile_edit_layout.xml
@@ -19,16 +19,21 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="30dp"
             android:id="@+id/image_edit"
+            android:onClick="get_profile_pic"
             android:background="@drawable/rounded_rect"
             />
-        <EditText
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Enter Name"
-            android:textColorHint="#000"
-            android:layout_marginLeft="20dp"
-            android:background="@null"
-            android:layout_toRightOf="@id/image_edit"/>
+            android:text="upload"
+            android:textColor="#000"
+            android:textSize="10dp"
+            android:id="@+id/upload_image"
+            android:background="@drawable/rounded_rect"
+            android:layout_toRightOf="@+id/image_edit"
+            android:layout_marginLeft="40dp"
+            android:onClick="upload_pic"
+       />
 
     </RelativeLayout>
 
@@ -47,7 +52,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:orientation="horizontal"
@@ -62,7 +67,8 @@
                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="First Name"
+                    android:hint="Name"
+                    android:id="@+id/name_id"
                     android:textColor="#000"
                     android:background="@null"
                     android:textColorHint="#000"
@@ -74,7 +80,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:orientation="horizontal"
@@ -86,12 +92,69 @@
                     <ImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:src="@drawable/user"
+                        android:src="@drawable/mail"
                         android:layout_gravity="center"/>
                     <EditText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:hint="Last Name"
+                        android:hint="Email"
+                        android:textColor="#000"
+                        android:background="@null"
+                        android:textColorHint="#000"
+                        android:textSize="15dp"
+                        android:id="@+id/email_id"
+                        android:layout_marginLeft="20dp"/>
+
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:orientation="horizontal"
+                    android:background="#c1cccccc"
+                    android:padding="15dp">
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/users"
+                        android:layout_gravity="center"/>
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="Gender"
+                        android:id="@+id/gender_id"
+                        android:textColor="#000"
+                        android:background="@null"
+                        android:textColorHint="#000"
+                        android:textSize="15dp"
+                        android:layout_marginLeft="20dp"/>
+
+
+                </LinearLayout>
+                               <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:orientation="horizontal"
+                    android:background="#c1cccccc"
+                    android:padding="15dp">
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/smartphone_call"
+                        android:layout_gravity="center"/>
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="Mobile Number"
+                        android:id="@+id/mobile_id"
                         android:textColor="#000"
                         android:background="@null"
                         android:textColorHint="#000"
@@ -103,7 +166,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:orientation="horizontal"
@@ -125,20 +188,25 @@
                         android:background="@null"
                         android:textColorHint="#000"
                         android:textSize="15dp"
+                        android:id="@+id/bio_id"
                         android:layout_marginLeft="20dp"/>
 
 
                 </LinearLayout>
+
+
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:textColor="#fff"
-                    android:text="DONE"
+                    android:text="update"
                     android:textSize="15dp"
                     android:padding="10dp"
                     android:layout_gravity="right"
                     android:layout_marginRight="20dp"
+                    android:id="@+id/done_button"
+                    android:onClick="update_profile"
                     />
             </LinearLayout>
 
