--- a/app/src/main/res/layout/activity_verify_layout.xml
+++ b/app/src/main/res/layout/activity_verify_layout.xml
@@ -4,13 +4,13 @@
     android:id="@+id/activity_main2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/imagegroupdescision"
+    android:background="@drawable/rounder_rec"
    >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/grad_rec">
+      >
 
     </RelativeLayout>
 
