--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -2,20 +2,59 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
-    android:background="@drawable/mensupport"
+    android:background="@drawable/groupbackimage"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#c1d2cfcf"
+        android:background="#c1cccccc"
         >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#c1cccccc"
+            android:id="@+id/toolbar">
 
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/fabbutton"
+            android:src="@drawable/menu"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:padding="10dp"
+            android:id="@+id/menu_icon"
+            android:onClick="open_drawer"
+            />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="JOINED GROUPS"
+                android:textColor="#000"
+                android:layout_toRightOf="@+id/menu_icon"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                />
+
+        </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/joined_group_recycler"
+            android:layout_below="@+id/toolbar"
+            android:background="#b1e7a0a0"
+            >
+
+        </android.support.v7.widget.RecyclerView>
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/plus"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_margin="40dp"
@@ -41,13 +80,17 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/first_layout">
+        android:id="@+id/profile_layout_id"
+        >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:orientation="horizontal"
-        android:background="@drawable/grad_rec">
+        android:background="@drawable/grad_rec"
+        android:onClick="edit_profile_layout"
+        android:id="@+id/profile_layout"
+       >
 
        <ImageView
            android:layout_width="40dp"
@@ -55,8 +98,7 @@
            android:src="@drawable/cartoon"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
-           android:onClick="edit_profile_layout"
-           android:id="@+id/profile_layout"
+
            />
 
         <TextView
@@ -67,14 +109,15 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
             android:textSize="20dp"
+
             />
     </LinearLayout>
         </RelativeLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:layout_below="@+id/first_layout"
-        android:background="#fff"
+        android:layout_height="2dp"
+        android:layout_below="@+id/profile_layout_id"
+        android:background="#afffffff"
         android:id="@+id/sec_layout"
         >
 
@@ -93,6 +136,9 @@
         android:layout_height="80dp"
         android:orientation="horizontal"
         android:background="@drawable/grad_rec"
+        android:onClick="open_all_groups"
+        android:clickable="true"
+        android:id="@+id/all_groups_layout"
         >
 
         <ImageView
@@ -111,28 +157,80 @@
             android:layout_marginTop="30dp"
             android:textSize="20dp"
             android:textColor="#fff"
-            android:id="@+id/all_groups_layout"
-            android:onClick="AllGroups"
+
+
             />
 
     </LinearLayout>
 
     </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_below="@+id/third_layout"
+            android:background="#afffffff"
+            android:id="@+id/all_group_layout"
+            >
+
+        </View>
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/third_layout"
+            android:id="@+id/third_layout2"
+
+            >
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:orientation="horizontal"
+                android:background="@drawable/grad_rec"
+                android:onClick="open_expert_groups"
+                android:clickable="true"
+                android:id="@+id/expert_groups_layout"
+
+                >
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/house"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Expert groups"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="30dp"
+                    android:textSize="20dp"
+                    android:textColor="#fff"
+
+                    />
+
+            </LinearLayout>
+
+        </RelativeLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_below="@id/third_layout"
+        android:layout_below="@id/third_layout2"
         android:background="#fff"
         android:id="@+id/home_layout"
         >
-
     </View>
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/third_layout"
+        android:layout_below="@id/third_layout2"
         android:id="@+id/fourth_layout"
 
         >
@@ -143,6 +241,9 @@
             android:layout_height="80dp"
             android:orientation="horizontal"
             android:background="@drawable/grad_rec"
+            android:clickable="true"
+            android:onClick="open_groups"
+            android:id="@+id/my_group_layout"
             >
 
             <ImageView
@@ -280,6 +381,8 @@
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:orientation="horizontal"
+            android:clickable="true"
+            android:onClick="share_app"
             android:background="@drawable/grad_rec"
             >
 
@@ -308,28 +411,83 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_below="@id/share_layout"
-        android:background="#fff"
+        android:background="#b2ffffff"
         android:id="@+id/share_view_layout"
         >
 
     </View>
 
 
-   <RelativeLayout
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/share_layout"
+            android:id="@+id/fedbckk"
+
+            >
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:orientation="horizontal"
+                android:clickable="true"
+                android:onClick="open_feedback"
+                android:id="@+id/feedback_layout"
+                android:background="@drawable/grad_rec"
+                >
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/feedback"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Feedback"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="30dp"
+                    android:textSize="20dp"
+                    android:textColor="#fff"
+                    />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_below="@id/share_layout"
+            android:background="#fff"
+            android:id="@+id/fedback_view"
+            >
+
+        </View>
+
+
+        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
-       android:layout_below="@id/share_view_layout"
+       android:layout_below="@id/fedbckk"
        android:background="@drawable/grad_rec"
+            android:onClick="logout"
+            android:clickable="true"
            >
+
        <TextView
            android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
+           android:layout_height="match_parent"
            android:text="Sign Out"
            android:textSize="20dp"
            android:textColor="#fff"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="80dp"
            />
+
 
    </RelativeLayout>
     </RelativeLayout>
