--- a/app/src/main/res/layout/splash_layout.xml
+++ b/app/src/main/res/layout/splash_layout.xml
@@ -6,10 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.karam.demo1.splash_layout"
-    android:background="@drawable/gradient_rect"
+    android:background="@drawable/hand"
     >
 
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/gradient_rect"
+       >
 
     <TextView
         android:layout_width="wrap_content"
@@ -18,7 +22,7 @@
         android:textSize="30dp"
         android:textColor="#fff"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="50dp"
         android:id="@+id/first_text" />
 
 
@@ -45,62 +49,112 @@
         android:id="@+id/third_text"/>
 
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/third_text"
+        android:textColor="#fff"
+        android:textSize="15dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:text="HELP/ SUPPORT/ ADVICE/ GUIDANCE"
+        android:id="@+id/guidance_id"
+
+        />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/third_text"
-            android:textColor="#fff"
-            android:textSize="18dp"
-            android:layout_centerHorizontal="true"
+            android:layout_below="@id/guidance_id"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
-            android:text="HELP"
-            android:id="@+id/help_id"
-
+            android:text="Experts Login/Signup"
+            android:textSize="20dp"
+            android:textColor="#401111"
+            android:id="@+id/expert_id"
             />
+        <View
+            android:layout_width="190dp"
+            android:layout_height="2dp"
+            android:layout_marginLeft="20dp"
+            android:layout_below="@+id/expert_id"
+            android:background="#fff"
+            android:id="@+id/expert_view"
+            ></View>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/help_id"
-        android:textColor="#fff"
-        android:textSize="20dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:text="ADVICE"
-        android:id="@+id/advice_id"
-        />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/expert_view"
+            android:layout_marginTop="10dp"
+            android:id="@+id/expert_layout__id">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/advice_id"
-        android:textColor="#fff"
-        android:textSize="25dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:text="SUPPORT"
-        android:id="@+id/support_id"
-        />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/support_id"
-        android:textColor="#fff"
-        android:textSize="30dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:text="GUIDANCE"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="2">
 
-        />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="LOGIN"
+                    android:textColor="#000"
+                    android:layout_weight="1"
+                    android:background="@drawable/rounder_rec"
+                    android:textSize="20dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:onClick="login"
+                    android:id="@+id/expert_login"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="SIGN UP"
+                    android:layout_weight="1"
+                    android:background="@drawable/rounder_rec"
+                    android:layout_marginRight="10dp"
+                    android:textColor="#000"
+                    android:textSize="20dp"
+                    android:onClick="signup"
+                    android:id="@+id/expert_signup"
+                    />
+            </LinearLayout>
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/expert_layout__id"
+            android:text="User Login/Signup"
+            android:textColor="#401111"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            android:textSize="20dp"
+            android:id="@+id/user_text_id"/>
+        <View
+            android:layout_width="170dp"
+            android:layout_height="2dp"
+            android:layout_marginLeft="20dp"
+            android:layout_below="@+id/user_text_id"
+            android:background="#fff"
+            android:id="@+id/user_view"
+            ></View>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/user_view"
+            android:layout_marginTop="10dp">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="2"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp">
+        >
 
      <Button
          android:layout_width="wrap_content"
@@ -108,7 +162,7 @@
          android:text="LOGIN"
          android:textColor="#000"
          android:layout_weight="1"
-         android:background="#e7a0a0"
+         android:background="@drawable/rounder_rec"
          android:textSize="20dp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
@@ -120,17 +174,17 @@
             android:layout_height="wrap_content"
             android:text="SIGN UP"
             android:layout_weight="1"
-            android:background="#dc638b"
+            android:background="@drawable/rounder_rec"
             android:layout_marginRight="10dp"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="20dp"
             android:onClick="signup"
             android:id="@+id/button_signup"
              />
-
     </LinearLayout>
+            </RelativeLayout>
 
-
+    </RelativeLayout>
 
 
 </RelativeLayout>
