--- a/app/src/main/res/layout/activity_my_groups.xml
+++ b/app/src/main/res/layout/activity_my_groups.xml
@@ -14,19 +14,22 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="My Group"
+            android:text="Add Group"
             android:textColor="#fff"
-            android:textSize="50dp"
+            android:textSize="40dp"
             android:layout_marginTop="80dp"
             android:textStyle="italic"
-            android:layout_centerHorizontal="true"/>
+           android:layout_marginLeft="20dp"
+            android:id="@+id/add_group_id"/>
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-       android:layout_centerInParent="true"
+       android:layout_below="@+id/add_group_id"
         android:hint="Group Name"
         android:padding="10dp"
         android:textColor="#000"
+        android:layout_marginTop="60dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:textColorHint="#000"
