--- a/app/src/main/res/layout/activity_sign_up_layout.xml
+++ b/app/src/main/res/layout/activity_sign_up_layout.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
- android:background="@drawable/hands"
+ android:background="@drawable/hand"
     >
 
     <RelativeLayout
@@ -16,7 +16,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="#e97676"
+        android:background="@drawable/create_group"
         android:layout_centerInParent="true"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
@@ -55,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Enter Mobile Number"
                 android:layout_toRightOf="@id/mobile_image"
-                android:inputType="number"
+                android:inputType="phone"
                 android:textColor="#000"
                 android:textColorHint="#000"
                 android:layout_centerVertical="true"
@@ -79,7 +79,7 @@
         android:textColor="#000"
         android:textSize="20dp"
 
-        android:background="#fff"
+        android:background="@drawable/create_group"
         android:layout_marginTop="20dp"
         android:onClick="verify_button"
         android:id="@+id/verify_login"
