--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -5,19 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.karam.demo1.login_layout"
-    android:background="@drawable/grad_rec">
+    android:background="@drawable/group_discussing">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/image_layout"
-        android:background="@drawable/supportinggirls"
+
+
     >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/grad_rec"
             ></LinearLayout>
+
 </RelativeLayout>
 
 
@@ -28,7 +30,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="70dp"
         android:id="@+id/first_edit_text"
-        android:background="@drawable/grad_rec">
+        android:background="@drawable/rounder_rectangle">
 
         <TextView
             android:layout_width="wrap_content"
@@ -62,10 +64,11 @@
             android:layout_height="wrap_content"
             android:hint="Enter Mobile Number"
             android:layout_toRightOf="@id/mobile_image"
-            android:inputType="number"
+            android:inputType="phone"
             android:id="@+id/mobile_et"
             android:textColor="#000"
             android:textColorHint="#000"
+            android:imeOptions="actionNext"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
             android:background="@null"
@@ -85,7 +88,7 @@
         android:layout_marginRight="20dp"
         android:layout_below="@id/first_edit_text"
         android:id="@+id/second_edit_text"
-        android:background="@drawable/grad_rec">
+        android:background="@drawable/rounder_rectangle">
 
         <TextView
             android:layout_width="wrap_content"
@@ -121,6 +124,7 @@
                 android:layout_toRightOf="@id/lock_image"
                 android:textColor="#000"
                 android:id="@+id/password_et"
+                android:inputType="textPassword"
                 android:textColorHint="#000"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
@@ -132,15 +136,15 @@
     </RelativeLayout>
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/second_edit_text"
         android:layout_marginRight="30dp"
         android:layout_marginLeft="30dp"
         android:text="LOGIN"
-        android:textSize="20dp"
+        android:textSize="10dp"
         android:textColor="#000"
-        android:background="#e7a0a0"
+        android:background="@drawable/create_group"
        android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
         android:padding="15dp"
@@ -153,10 +157,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/button_login"
         android:layout_centerHorizontal="true"
-        android:text="Forget password?"
+        android:text="Forgot password?"
         android:layout_marginTop="20dp"
         android:textColor="#fff"
-        android:textSize="15dp"/>
+        android:textSize="15dp"
+        android:id="@+id/forget_password_id"
+        android:onClick="forgot_pass"/>
 
 
 
